--- a/ILCarro_3/build.gradle
+++ b/ILCarro_3/build.gradle
@@ -13,11 +13,12 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.2.2'
     implementation 'org.testng:testng:7.6.0'
 
-    compileOnly 'org.projectlombok:lombok:1.18.22'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
     testCompileOnly 'org.projectlombok:lombok:1.18.16'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
+    implementation 'ch.qos.logback:logback-classic:1.2.11'
 }
 
 test {
